# Routage

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: tensorzero.toml
opencode-plugin/: package.json
opencode-plugin/src/: index.ts
src/: auth.rs  bandit.rs  config.rs  domain.rs  handlers.rs  main.rs  optimize.rs  probe.rs  router.rs  store.rs
