[package]
name = "routage"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "timeout"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres", "any", "migrate", "uuid", "chrono"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
tokio-stream = "0.1"
futures = "0.3"
prometheus = "0.13"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
thiserror = "1"
anyhow = "1"
dashmap = "5"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
